[gd_scene load_steps=10 format=3 uid="uid://ddu7huicmgo7r"]

[ext_resource type="Script" path="res://scenes/ui/main_menu/credits.gd" id="1_ebq7n"]
[ext_resource type="StyleBox" uid="uid://1spqcg31jdx2" path="res://tress/sbf_ui_dark_mask.tres" id="2_bq6ll"]
[ext_resource type="AudioStream" uid="uid://bxodhr4xud0hs" path="res://assets/sounds/button_down.mp3" id="2_sjy07"]
[ext_resource type="StyleBox" uid="uid://dibwpul5ku25j" path="res://tress/sbe_default.tres" id="3_iq6gi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0lpbd"]

[sub_resource type="Animation" id="Animation_jxcnp"]
resource_name = "Enter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RootPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1152, 0), Vector2(752, 0)]
}

[sub_resource type="Animation" id="Animation_1iill"]
resource_name = "Exit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RootPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(752, 0), Vector2(1152, 0)]
}

[sub_resource type="Animation" id="Animation_ndqi4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RootPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-400, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bahpr"]
_data = {
"Enter": SubResource("Animation_jxcnp"),
"Exit": SubResource("Animation_1iill"),
"RESET": SubResource("Animation_ndqi4")
}

[node name="Credits" type="CanvasLayer"]
script = ExtResource("1_ebq7n")
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="Background" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = ExtResource("2_bq6ll")
theme_override_styles/hover = ExtResource("2_bq6ll")
theme_override_styles/pressed = ExtResource("2_bq6ll")
theme_override_styles/disabled = ExtResource("2_bq6ll")
theme_override_styles/focus = ExtResource("3_iq6gi")

[node name="RootPanel" type="ColorRect" parent="."]
custom_minimum_size = Vector2(400, 0)
offset_left = -400.0
offset_right = 0.000244141
offset_bottom = 648.0
color = Color(0.223529, 0.243137, 0.27451, 1)

[node name="ScrollerList" type="ScrollContainer" parent="RootPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="RootPanel/ScrollerList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator4" type="HSeparator" parent="RootPanel/ScrollerList/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0lpbd")

[node name="Label" type="Label" parent="RootPanel/ScrollerList/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Credits"
horizontal_alignment = 1

[node name="VSeparator5" type="HSeparator" parent="RootPanel/ScrollerList/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0lpbd")

[node name="ProgrammingArea" type="VBoxContainer" parent="RootPanel/ScrollerList/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="RootPanel/ScrollerList/VBoxContainer/ProgrammingArea"]
layout_mode = 2
theme_override_colors/font_color = Color(0.792157, 0.929412, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Programming"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="RootPanel/ScrollerList/VBoxContainer/ProgrammingArea"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="List" type="VBoxContainer" parent="RootPanel/ScrollerList/VBoxContainer/ProgrammingArea"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VSeparator" type="HSeparator" parent="RootPanel/ScrollerList/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0lpbd")

[node name="ArtArea" type="VBoxContainer" parent="RootPanel/ScrollerList/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="RootPanel/ScrollerList/VBoxContainer/ArtArea"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.780392, 0.917647, 1)
theme_override_font_sizes/font_size = 20
text = "Art"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="RootPanel/ScrollerList/VBoxContainer/ArtArea"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="List2" type="VBoxContainer" parent="RootPanel/ScrollerList/VBoxContainer/ArtArea"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VSeparator2" type="HSeparator" parent="RootPanel/ScrollerList/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0lpbd")

[node name="MusicArea" type="VBoxContainer" parent="RootPanel/ScrollerList/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="RootPanel/ScrollerList/VBoxContainer/MusicArea"]
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.941176, 0.698039, 1)
theme_override_font_sizes/font_size = 20
text = "Music"
horizontal_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="RootPanel/ScrollerList/VBoxContainer/MusicArea"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="List3" type="VBoxContainer" parent="RootPanel/ScrollerList/VBoxContainer/MusicArea"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VSeparator3" type="HSeparator" parent="RootPanel/ScrollerList/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0lpbd")

[node name="SoundArea" type="VBoxContainer" parent="RootPanel/ScrollerList/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="RootPanel/ScrollerList/VBoxContainer/SoundArea"]
layout_mode = 2
theme_override_colors/font_color = Color(0.690196, 0.85098, 0.694118, 1)
theme_override_font_sizes/font_size = 20
text = "Sound"
horizontal_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="RootPanel/ScrollerList/VBoxContainer/SoundArea"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="List3" type="VBoxContainer" parent="RootPanel/ScrollerList/VBoxContainer/SoundArea"]
layout_mode = 2
size_flags_horizontal = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bahpr")
}

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_sjy07")

[connection signal="button_down" from="Background" to="." method="_on_background_button_down"]
